--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,2 +1,3 @@
-<p><strong>User name</strong> {{user.name}}   <strong>Status</strong> {{user.status}} <button class="btn btn-sm btn-primary" (click)="onUpdateStatus('active')">active</button><button class="btn btn-sm btn-primary" (click)="onUpdateStatus('inactive')">inactive</button></p>
-
+<p>{{id + 1}}<strong> User name</strong> {{user.name}} <strong>Status</strong> {{user.status}} <button
+        class="btn btn-sm btn-warning" (click)="onUpdateStatus('active')">active</button><button
+        class="btn btn-sm btn-warning" (click)="onUpdateStatus('inactive')">inactive</button></p>
